==> xlongfeng/watertower/si4432.cpp <==
#include <cmsis_os.h>
#include <stdio.h>
#include <math.h>
#include "stm32f10x_gpio.h"
#include "Driver_SPI.h"
#include "si4432.h"
#define SPI_DRV_NUM           1
#define SPI_BUS_SPEED         2000000
#define _SPI_Driver_(n)  Driver_SPI##n
#define SPI_Driver_(n) _SPI_Driver_(n)
#define ptrSPI       (&SPI_Driver_(SPI_DRV_NUM))
#define MAX_TRANSMIT_TIMEOUT 200

void Si4432::init() {
  GPIO_InitTypeDef gpioInitStructure;
  
  /* _intPin */
  gpioInitStructure.GPIO_Pin = GPIO_Pin_6;
  gpioInitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  gpioInitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
  GPIO_Init(GPIOB, &gpioInitStructure);
  
  /* _sdnPin */
  gpioInitStructure.GPIO_Pin = GPIO_Pin_9;
  gpioInitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  gpioInitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(GPIOB, &gpioInitStructure);
  
	turnOff();
  
  ptrSPI->Initialize(NULL);
  ptrSPI->PowerControl(ARM_POWER_FULL);
  ptrSPI->Configure(ARM_SPI_CPOL0_CPHA0, ARM_SPI_MSB_LSB);
  ptrSPI->BusSpeed(SPI_BUS_SPEED);
  ptrSPI->SlaveSelect(ARM_SPI_SS_INACTIVE);

#ifdef DEBUG
	printf("SPI is initialized now.\n");
#endif

	hardReset();

}

bool Si4432::sendPacket(uint8_t length, const byte* data, bool waitResponse, uint32_t ackTimeout,
		uint8_t* responseLength, byte* responseBuffer) {

	clearTxFIFO();
	ChangeRegister(REG_PKG_LEN, length);

	BurstWrite(REG_FIFO, data, length);

	ChangeRegister(REG_INT_ENABLE1, 0x04); // set interrupts on for package sent
	ChangeRegister(REG_INT_ENABLE2, 0x00); // set interrupts off for anything else
	//read interrupt registers to clean them
	ReadRegister(REG_INT_STATUS1);
	ReadRegister(REG_INT_STATUS2);

	switchMode(TXMode | Ready);

	uint32_t enterMillis = osKernelSysTick();

	while (osKernelSysTick() - enterMillis < osKernelSysTickMicroSec(MAX_TRANSMIT_TIMEOUT * 1000)) {

		if (GPIO_ReadInputDataBit(GPIOB, GPIO_Pin_6) != Bit_RESET) {
			continue;
		}

		byte intStatus = ReadRegister(REG_INT_STATUS1);
		ReadRegister(REG_INT_STATUS2);

		if (intStatus & 0x04) {
			switchMode(Ready | TuneMode);
#ifdef DEBUG
			printf("Package sent! -- %x\n", intStatus);
#endif
			// package sent. now, return true if not to wait ack, or wait ack (wait for packet only for 'remaining' amount of time)
			if (waitResponse) {
				if (waitForPacket(ackTimeout)) {
					getPacketReceived(responseLength, responseBuffer);
					return true;
				} else {
					return false;
				}
			} else {
				return true;
			}
		}
	}

	//timeout occured.
//#ifdef DEBUG
	printf("Timeout in Transit -- \n");
//#endif
	switchMode(Ready);

	if (ReadRegister(REG_DEV_STATUS) & 0x80) {
		clearFIFO();
	}

	return false;

}

void Si4432::switchMode(byte mode) {

	ChangeRegister(REG_STATE, mode); // receive mode
	//delay(20);
#ifdef DEBUG
	byte val = ReadRegister(REG_DEV_STATUS);
	if (val == 0 || val == 0xFF) {
		printf("%x -- WHAT THE HELL!!\n", val);
	}
#endif
}

void Si4432::BurstWrite(Registers startReg, const byte value[], uint8_t length) {

	byte regVal = (byte) startReg | 0x80; // set MSB

  ptrSPI->SlaveSelect(ARM_SPI_SS_ACTIVE);
  ptrSPI->TransferByte(regVal);

	for (byte i = 0; i < length; ++i) {
#ifdef DEBUG
		printf("Writing: %x | %x\n", (regVal != 0xFF ? (regVal + i) & 0x7F : 0x7F), value[i]);
    osDelay(5);
#endif
    ptrSPI->TransferByte(value[i]);
	}

  ptrSPI->SlaveSelect(ARM_SPI_SS_INACTIVE);
}

void Si4432::BurstRead(Registers startReg, byte value[], uint8_t length) {

	byte regVal = (byte) startReg & 0x7F; // set MSB

	ptrSPI->SlaveSelect(ARM_SPI_SS_ACTIVE);
  ptrSPI->TransferByte(regVal);

	for (byte i = 0; i < length; ++i) {
		value[i] = ptrSPI->TransferByte(0xFF);

#ifdef DEBUG
		printf("Reading: %x | %x\n", (regVal != 0x7F ? (regVal + i) & 0x7F : 0x7F), value[i]);
    osDelay(5);
#endif
	}

	ptrSPI->SlaveSelect(ARM_SPI_SS_INACTIVE);
}

bool Si4432::isPacketReceived() {

	if (GPIO_ReadInputDataBit(GPIOB, GPIO_Pin_6) != Bit_RESET) {
		return false; // if no interrupt occured, no packet received is assumed (since startListening will be called prior, this assumption is enough)
	}
	// check for package received status interrupt register
	byte intStat = ReadRegister(REG_INT_STATUS1);

#ifdef DEBUG
	byte intStat2 = ReadRegister(REG_INT_STATUS2);

	if (intStat2 & 0x40) { //interrupt occured, check it && read the Interrupt Status1 register for 'preamble '

		printf("HEY!! HEY!! Valid Preamble detected -- %x\n", intStat2);

	}

	if (intStat2 & 0x80) { //interrupt occured, check it && read the Interrupt Status1 register for 'preamble '

		printf("HEY!! HEY!! SYNC WORD detected -- %x\n", intStat2);

	}
#else
	ReadRegister(REG_INT_STATUS2);
#endif

	if (intStat & 0x02) { //interrupt occured, check it && read the Interrupt Status1 register for 'valid packet'
		switchMode(Ready | TuneMode); // if packet came, get out of Rx mode till the packet is read out. Keep PLL on for fast reaction
#ifdef DEBUG
				printf("Packet detected -- %x\n", intStat);
#endif
		return true;
	} else if (intStat & 0x01) { // packet crc error
		switchMode(Ready); // get out of Rx mode till buffers are cleared
//#ifdef DEBUG
    printf("CRC Error in Packet detected!-- %x\n", intStat);
//#endif
		clearRxFIFO();
		switchMode(RXMode | Ready); // get back to work
		return false;
	}

	//no relevant interrupt? no packet!

	return false;
}
